--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 
 <html lang="en">
@@ -26,25 +28,27 @@
     /* Map legend style */
     .map-legend {
       position: absolute;
-      bottom: 10px;
+      top: 10px;
       right: 10px;
       background: white;
-      padding: 10px;
+      padding: 15px;
       border-radius: 5px;
       box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
-      font-size: 14px;
+      font-size: 18px; /* تكبير النص */
       color: #333;
-      line-height: 1.5;
+      line-height: 1.8;
+      width: 200px; /* توسيع المفتاح */
+      font-weight: bold; /* تكثيف النص */
     }
     .legend-item {
       display: flex;
       align-items: center;
-      margin-bottom: 5px;
+      margin-bottom: 10px;
     }
     .legend-color {
-      width: 15px;
-      height: 15px;
-      margin-right: 8px;
+      width: 25px; /* تكبير الدائرة */
+      height: 25px;
+      margin-right: 10px;
       border-radius: 50%;
     }
     .waste-color {
