--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 
 <html lang="en">
@@ -27,27 +26,27 @@
     /* Map legend style */
     .map-legend {
       position: absolute;
-      top: 10px;
-      right: 10px;
+      top: 20px;
+      right: 20px;
       background: white;
-      padding: 20px;
-      border-radius: 8px;
+      padding: 30px;
+      border-radius: 10px;
       box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
-      font-size: 24px; /* تكبير النص */
+      font-size: 32px; /* تكبير النص */
       color: #333;
       line-height: 2;
-      width: 250px; /* توسيع المفتاح */
-      font-weight: bold; /* تكثيف النص */
+      width: 300px; /* توسيع المفتاح */
+      font-weight: bold;
     }
     .legend-item {
       display: flex;
       align-items: center;
-      margin-bottom: 15px;
+      margin-bottom: 20px;
     }
     .legend-color {
-      width: 40px; /* تكبير الدائرة */
-      height: 40px;
-      margin-right: 15px;
+      width: 60px; /* تكبير الدائرة */
+      height: 60px;
+      margin-right: 20px;
       border-radius: 50%;
     }
     .waste-color {
@@ -118,7 +117,7 @@
         pointToLayer: function(feature, latlng) {
           let color = feature.properties.TYPE_OF_WA === "iron" ? "gray" : "orange";
           return L.circleMarker(latlng, {
-            radius: 7,
+            radius: 10,
             fillColor: color,
             color: color,
             weight: 1,
