--- a/index.html
+++ b/index.html
@@ -1,6 +1,70 @@
+<!DOCTYPE html>
 
+<html lang="en">
 
+<head>
+  <meta charset="utf-8" />
+
+  <title>Ramallah Waste Containers</title>
+
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" />
+
+  <style>
+    body {
+      margin: 0px;
+      height: 100%;
+      width: 100%;
+    }
+
+    #map {
+      position: absolute;
+      width: 100%;
+      top: 0px;
+      bottom: 0;
+    }
+  </style>
+</head>
+
+<body>
+  <div id="map"></div>
+
+  <!-- Leaflet JavaScript library -->
+  <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+  <!-- Leaflet Locate Control CSS and JavaScript for geolocation feature -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet.locatecontrol@0.72.0/dist/L.Control.Locate.min.css" />
+  <script src="https://unpkg.com/leaflet.locatecontrol@0.72.0/dist/L.Control.Locate.min.js"></script>
+
+  <script>
+    // Define map options
+    const mapOptions = {
+      zoomSnap: 0.5,
+      center: [31.9045, 35.2045],
+      zoom: 17.5,
     };
+
+    // Define the map
+    const map = L.map("map", mapOptions);
+
+    // Add a base map to the map
+    L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', {
+      attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors &copy; <a href="https://carto.com/attributions">CARTO</a>',
+      subdomains: 'abcd',
+      maxZoom: 20
+    }).addTo(map);
+
+    // Load GeoJSON data for zones
+    $.getJSON("RamallahZones.json", function(RZ) {
+      L.geoJson(RZ, {
+        style: function(feature) {
+          return {
+            fillColor: "yellow",
+            fillOpacity: 0.3,
+            color: "yellow",
+            weight: 1.0,
+            opacity: 0.7
+          };
         },
         onEachFeature: function(feature, layer) {
           layer.on('click', function(e) {
@@ -14,11 +78,10 @@
     $.getJSON("wasteContainer.json", function(WC) {
       L.geoJson(WC, {
         pointToLayer: function(feature, latlng) {
-          let color = feature.properties.TYPE_OF_WA === "iron" ? "gray" : "orange";
           return L.circleMarker(latlng, {
-            radius: 10,
-            fillColor: color,
-            color: color,
+            radius: 5,
+            fillColor: "orange",
+            color: "orange",
             weight: 1,
             opacity: 1,
             fillOpacity: 0.8
@@ -26,4 +89,28 @@
         },
         onEachFeature: function(feature, layer) {
           layer.on('click', function(e) {
+            alert("type: " + feature.properties.TYPE_OF_WA);
+          });
+        }
+      }).addTo(map);
+    });
 
+    // Add Geolocation (Locate) Control to map
+    L.control.locate({
+      position: "topright",
+      flyTo: true,
+      strings: {
+        title: "Show my location"
+      }
+    }).addTo(map);
+
+    // Add Scale Control to map
+    L.control.scale({
+      position: "bottomleft",
+      metric: true,
+      imperial: false
+    }).addTo(map);
+  </script>
+</body>
+
+</html>
