--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <html lang="en">
@@ -5,112 +6,139 @@
 <head>
   <meta charset="utf-8" />
 
+  <!-- Give the page a title -->
   <title>Ramallah Waste Containers</title>
 
+  <!-- Add a link to the Leaflet CSS library so you can reference it for styling your map -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" />
 
+  <!-- All the CSS code goes inside the style tags below -->
   <style>
+    /* style the body */
     body {
       margin: 0px;
       height: 100%;
       width: 100%;
     }
 
+    /* style the map */
     #map {
       position: absolute;
       width: 100%;
       top: 0px;
       bottom: 0;
     }
+
+    /* style for the legend */
+    .legend {
+      background: white;
+      line-height: 1.5em;
+      padding: 10px;
+    }
+    .legend i {
+      width: 12px;
+      height: 12px;
+      float: left;
+      margin-right: 8px;
+      opacity: 0.7;
+    }
   </style>
 </head>
 
 <body>
+  <!-- the map -->
   <div id="map"></div>
 
-  <!-- Leaflet JavaScript library -->
+  <!-- Add a link to the Leaflet JavaScript library so you can reference it for building your map -->
   <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"></script>
+
+  <!-- Add a link to the jQuery JavaScript library so you can leverage ajax methods to load your data -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-  <!-- Leaflet Locate Control CSS and JavaScript for geolocation feature -->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet.locatecontrol@0.72.0/dist/L.Control.Locate.min.css" />
-  <script src="https://unpkg.com/leaflet.locatecontrol@0.72.0/dist/L.Control.Locate.min.js"></script>
-
+  <!-- All JavaScript goes inside the script tags below -->
   <script>
-    // Define map options
+    // define map options
     const mapOptions = {
-      zoomSnap: 0.5,
-      center: [31.9045, 35.2045],
-      zoom: 17.5,
+      zoomSnap: 0.5,  // this allows fractional zooming
+      center: [31.9045, 35.2045], // center the map on the coordinates for Ramallah
+      zoom: 17.5, // set the initial zoom
     };
 
-    // Define the map
+    // define the map with the options above
     const map = L.map("map", mapOptions);
 
-    // Add a base map to the map
+    // add a base map to the map
     L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', {
       attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors &copy; <a href="https://carto.com/attributions">CARTO</a>',
       subdomains: 'abcd',
       maxZoom: 20
     }).addTo(map);
 
-    // Load GeoJSON data for zones
-    $.getJSON("RamallahZones.json", function(RZ) {
-      L.geoJson(RZ, {
-        style: function(feature) {
-          return {
-            fillColor: "yellow",
-            fillOpacity: 0.3,
-            color: "yellow",
-            weight: 1.0,
-            opacity: 0.7
-          };
-        },
-        onEachFeature: function(feature, layer) {
-          layer.on('click', function(e) {
-            alert("Zone: " + feature.properties.NAME_ENGLI + "\nMAIL_CODE: " + feature.properties.MAIL_CODE);
-          });
-        }
-      }).addTo(map);
-    });
-
-    // Load GeoJSON data for waste containers
-    $.getJSON("wasteContainer.json", function(WC) {
-      L.geoJson(WC, {
-        pointToLayer: function(feature, latlng) {
-          return L.circleMarker(latlng, {
-            radius: 5,
-            fillColor: "orange",
-            color: "orange",
-            weight: 1,
-            opacity: 1,
-            fillOpacity: 0.8
-          });
-        },
-        onEachFeature: function(feature, layer) {
-          layer.on('click', function(e) {
-            alert("type: " + feature.properties.TYPE_OF_WA);
-          });
-        }
-      }).addTo(map);
-    });
-
-    // Add Geolocation (Locate) Control to map
-    L.control.locate({
-      position: "topright",
-      flyTo: true,
-      strings: {
-        title: "Show my location"
+    // load and display zones
+    const zonesLayer = L.geoJson(null, {
+      style: function(feature) {
+        return {
+          fillColor: "yellow",
+          fillOpacity: 0.3,
+          color: "yellow",
+          weight: 1.0,
+          opacity: 0.7
+        };
+      },
+      onEachFeature: function(feature, layer) {
+        layer.on('click', function(e) {
+          alert("Zone: " + feature.properties.NAME_ENGLI + "\nMAIL_CODE: " + feature.properties.MAIL_CODE);
+        });
       }
-    }).addTo(map);
+    });
 
-    // Add Scale Control to map
-    L.control.scale({
-      position: "bottomleft",
-      metric: true,
-      imperial: false
-    }).addTo(map);
+    $.getJSON("RamallahZones.json", function(RZ) {
+      zonesLayer.addData(RZ).addTo(map);
+    });
+
+    // load and display waste containers
+    const wasteContainersLayer = L.geoJson(null, {
+      pointToLayer: function(feature, latlng) {
+        return L.circleMarker(latlng, {
+          radius: 5,
+          fillColor: "orange",
+          color: "orange",
+          weight: 1,
+          opacity: 1,
+          fillOpacity: 0.8
+        });
+      },
+      onEachFeature: function(feature, layer) {
+        layer.on('click', function(e) {
+          alert("type: " + feature.properties.TYPE_OF_WA);
+        });
+      }
+    });
+
+    $.getJSON("wasteContainer.json", function(WC) {
+      wasteContainersLayer.addData(WC).addTo(map);
+    });
+
+    // Add layers to map with control options
+    const baseLayers = {};
+    const overlays = {
+      "Zones": zonesLayer,
+      "Waste Containers": wasteContainersLayer
+    };
+
+    L.control.layers(baseLayers, overlays).addTo(map);
+
+    // Add legend to the map
+    const legend = L.control({ position: "bottomright" });
+
+    legend.onAdd = function() {
+      const div = L.DomUtil.create("div", "legend");
+      div.innerHTML += "<i style='background: yellow'></i> Zones<br>";
+      div.innerHTML += "<i style='background: orange'></i> Waste Containers<br>";
+      return div;
+    };
+
+    legend.addTo(map);
+
   </script>
 </body>
-
-</html>
